--- a/css/custom.css
+++ b/css/custom.css
@@ -3,13 +3,8 @@
     padding: 0;
     box-sizing: border-box;
 }
-
-@media screen and (min-width: 991px) {
-    * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-    }
+/* ******************************************************************** */
+@media screen and (min-width: 992px) {
     /* section nav **************************************************/
     #navbar {
         display: flex;
@@ -47,7 +42,7 @@
     
     /* section home ***************************************************************/
     #home {
-        height: 85vh;
+        height: 60vh;
         padding-block-start: 5vh;
         background-image: url("../images/hero-image.jpg");
         background-size:cover;
@@ -57,7 +52,7 @@
     }
     
     #home .glasmorphism-test{
-        margin-inline: 50vh;
+        margin-inline: 30%;
         padding-block: 1.5vh;
         border: none; 
         border-radius: 15px;
@@ -67,8 +62,8 @@
     }
     
     #home h1 {	
-        margin-inline: 2em;
-        font-size: 3rem;
+        margin-inline: 17vh;
+        font-size: 2rem;
     }
     #home p {	
         margin-block: 1em;
@@ -94,20 +89,22 @@
     }
     /* section who ***************************************************************/
     #who {
-        height: 50vh;
-        padding-block: 2em ;
+        height: 40vh;
+        margin: 0 auto;
+        padding-block: 3vh ;
         background-color: #fefeff;
         text-align:  center;
     }
     
     #who h1 {
         color:#e74d3d;
+        margin: 0 auto;
         margin-block: 0.5vh;
     }
     
     #who .underline{
+        margin: 0 auto;
         margin-block-start: 2vh;
-        margin-inline: 46.6%;
         width: 15vh;
         border-bottom: 2px solid red;
     }
@@ -122,7 +119,7 @@
     
     /* section get involved ***************************************************************/
     #get-involved {
-        height: 60vh;
+        height: 50vh;
         padding-block-start: 2em;
         background-color: #f5f4f4;
         text-align:  center;
@@ -130,19 +127,20 @@
     }
     
     #get-involved  .underline{
+        margin: 0 auto;
+        margin-block-start: 2vh;
         width: 15vh;
-        margin: 1em auto;
         border-bottom: 2px solid red;
-        margin-bottom: 2em;
-        }
+    }
+    
     #get-involved .card-involved-container {
         display: grid;
         grid-template-columns: repeat(3, 25em);
-        margin: 3em 10em;
+        margin-inline-start: 18.5%;
+        margin-block-start: 2vh;
     }
     
     #get-involved .card {
-        margin-inline: 2vh;
         color: red;
     }
     #get-involved .card i{
@@ -174,70 +172,57 @@
         background-color: #f74d3d;
     }
     #Logo-brand {
-        margin-inline-start: 11em;
-        margin-block-start: 6.2em;
+        margin-inline-start: 35vh;
+        margin-block-start: 15vh;
     }
     #back-to-top i{
-        margin: 0em;
-        margin-inline-start: 28em;
+        margin-inline-start: 120vh
     }
     #back-to-top i:hover{
         background-color: rgb(253, 17, 17);
     }
 }
+/* ******************************************************************** */
+/* css tablet  *****************************************************************************/
+@media screen and (max-width: 991px) and (min-width: 768px) {
 
-
-/* reponsive mobile ******************************************************************************************/
-@media screen and (max-width: 767px) {
-    /* section nav ***************************************************************/
     #navbar {
-        display: none;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 1.5vh 3vh;
+        background-color: #000;
+        color: #fff;                
     }
+    #navbar img {
+        margin-inline-start: 8vh;
+        height: 2.4vh; 
+        display: block;
+    }
+    #navbar .menu {
+        display: flex;
+        margin-inline-end: 8vh;  
+        gap: 5vh;
+                
+    }
+    #navbar a {
+        color: #fff; 
+        text-decoration: none;
+        font-size: 1em;
+
+    }
+    #navbar a:hover {
+        color:#d9524e ;
+    }
+    
     /* Style the navigation menu */
     .topnav-mobile{
-        overflow: hidden;
-        background-color: #0c0c0c;
-        position: relative;
-      }
-      
-      /* Hide the links inside the navigation menu (except for logo/home) */
-      .topnav-mobile #myLinks {
         display: none;
-      }
-    
-    /* Style navigation menu links */
-    .topnav-mobile a {
-        color: rgb(253, 253, 253);
-        padding: 14px 16px;
-        text-decoration: none;
-        font-size: 17px;
-        display: block;
-      }
-      
-      /* Style the hamburger menu */
-      .topnav-mobile a.icon {
-        background: rgb(85, 83, 83);
-        display: block;
-        position: absolute;
-        right: 0.20em;
-        top: 0.20em;
-      }
-      
-      /* Add a grey background color on mouse-over */
-      .topnav-mobile a:hover {
-        background-color: #010101;
-        color: rgb(248, 248, 248);
-      }
-      
-      /* Style the active link (or home/logo) */
-      .active {
-        background-color: #000000;
-        color: rgb(255, 255, 255);
       }
     
     /* section home ***************************************************************/
     #home {
-        height: 70vh;
+        height: 60vh;
         padding-block-start: 5vh;
         background-image: url("../images/hero-image.jpg");
         background-size:cover;
@@ -256,21 +241,21 @@
         backdrop-filter: blur(10px); 
     }
     #home h1 {	
-        margin-inline: 23vh;
+        margin-inline: 13vh;
         font-size: 1.5rem;
     }
     #home p {	
-        margin-block-start: 1.5em;
-        margin-inline: 4em;
+        margin-block-start: 1.5vh;
+        margin-inline: 2vh;
         font-size: 0.7rem;
-        line-height: 1.9vh;
+        line-height: 2vh;
     }
     #home button {	
         background-color: #d9524e ;
-        margin: 0 auto;
-        margin-block-start: 1em;
-        padding: 1.5vh;
         border: none;
+        margin: 0 auto;
+        margin-block-start: 2vh;
+        padding: 1.5vh;
         border-radius: 4px;
         color: white;
         font-size: 2rem;
@@ -282,8 +267,8 @@
     }
     /* section who ***************************************************************/
     #who {
-        height: 55vh;
-        padding-block: 2em ;
+        height: 50vh;
+        padding-block: 5vh ;
         background-color: #fefeff;
         text-align:  center;
     }
@@ -293,7 +278,10 @@
         margin-block: 0.5vh;
     }
     #who .underline{
-     visibility: hidden;
+        margin: 0 auto;
+        margin-block: 2vh;
+        width: 20vh;
+        border-bottom: 2px solid red;
     }
     #who p {
         margin-inline: 11vh;
@@ -312,14 +300,21 @@
         color: red;
     }
     
+    #get-involved  .underline{
+        margin: 0 auto;
+        margin-block: 2vh;
+        width: 15vh;
+        border-bottom: 2px solid red;
+    }
+
     #get-involved .card {
         color: red;
         margin: 3vh 5vh ;
-    
     }
+
     #get-involved .card i{
         color: black;
-        margin-block-end: 0.2em;
+        margin-block-end: 0.2vh;
     }
     
     #get-involved .card h1 {
@@ -341,17 +336,197 @@
     
     /* section get involved ***************************************************************/
     #footer {
-        height: 50vh;
+        height: 40vh;
         background-color: #f74d3d;
         position: relative;
     }
     #Logo-brand {
-        margin-block-start: 40vh;
-        margin-inline-start: 10vh;
+        margin-block-start: 30vh;
+        margin-inline-start: 5vh;
     }
     #back-to-top i{
-        margin-inline-start: 42vh;
-        margin-block-start: -50vh;
+        margin-inline-start: 90vh;
+        margin-block-start: -5vh;
+    }
+    #back-to-top i:hover{
+        background-color: grey;
+    }
+}
+
+/* ******************************************************************** */
+/* reponsive mobile ******************************************************************************************/
+@media screen and (max-width: 767px) {
+    /* section nav ***************************************************************/
+   
+    #navbar {
+        display: none;
+    }
+    /* Style the navigation menu */
+    .topnav-mobile{
+        overflow: hidden;
+        background-color: #0c0c0c;
+        position: relative;
+      }
+      .topnav-mobile #myLinks {
+        display: none;
+      }
+    
+    /* Style navigation menu links */
+    .topnav-mobile a {
+        color: rgb(253, 253, 253);
+        padding: 1vh 2vh;
+        text-decoration: none;
+        display: block;
+      }
+      
+      /* Style the hamburger menu */
+      .topnav-mobile a.icon {
+        background: rgb(10, 10, 10);
+        display: block;
+        position: absolute;
+        right: 3vh;
+        top: 0.20em;
+      }
+      
+      /* Add a grey background color on mouse-over */
+      .topnav-mobile a:hover {
+        background-color: #010101;
+        color: rgb(255, 255, 255);
+      }
+      
+      /* Style the active link (or home/logo) */
+      .active {
+        background-color: #000000;
+        color: rgb(255, 255, 255);
+      }
+    
+    /* section home ***************************************************************/
+    #home {
+        height: 60vh;
+        padding-block-start: 5vh;
+        background-image: url("../images/hero-image.jpg");
+        background-size:cover;
+        background-position:bottom;
+        text-align: center;
+        color: white;
+    }
+    
+    #home .glasmorphism-test{
+        margin-inline: 14vh;
+        padding-block: 1.5vh;
+        border: none; 
+        border-radius: 15px;
+        box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1); /* Une légère ombre pour un effet 3D */
+        background: rgba(255, 255, 255, 0.1); 
+        backdrop-filter: blur(10px); 
+    }
+    #home h1 {	
+        margin-inline: 13vh;
+        font-size: 1.5rem;
+    }
+    #home p {	
+        margin-block-start: 1.5vh;
+        margin-inline: 2vh;
+        font-size: 0.7rem;
+        line-height: 2vh;
+    }
+    #home button {	
+        background-color: #d9524e ;
+        border: none;
+        margin: 0 auto;
+        margin-block-start: 2vh;
+        padding: 1.5vh;
+        border-radius: 4px;
+        color: white;
+        font-size: 2rem;
+    }
+    #home img {	
+     display:block;
+     margin: 0 auto;
+     margin-block-start: 2em;
+    }
+    /* section who ***************************************************************/
+    #who {
+        height: 50vh;
+        padding-block: 5vh ;
+        background-color: #fefeff;
+        text-align:  center;
+    }
+    #who h1 {
+        color:#e74d3d;
+        margin: 0 auto;
+        margin-block: 0.5vh;
+    }
+    #who .underline{
+        margin: 0 auto;
+        margin-block: 2vh;
+        width: 20vh;
+        border-bottom: 2px solid red;
+    }
+    #who p {
+        margin-inline: 11vh;
+        color:black;
+        font-size: 1.rem;
+        line-height: 3.3vh;
+    }
+    
+    /* section get involved ***************************************************************/
+    #get-involved {
+        display: grid;
+        place-items: center;
+        padding-block: 5vh;
+        background-color: #f5f4f4;
+        text-align:  center;
+        color: red;
+    }
+    
+    #get-involved  .underline{
+        margin: 0 auto;
+        margin-block: 2vh;
+        width: 15vh;
+        border-bottom: 2px solid red;
+    }
+
+    #get-involved .card {
+        color: red;
+        margin: 3vh 5vh ;
+    }
+
+    #get-involved .card i{
+        color: black;
+        margin-block-end: 0.2vh;
+    }
+    
+    #get-involved .card h1 {
+        font-size: 2rem;
+    }
+    #get-involved .card p {
+        color: black;
+        font-size: 1.2rem;
+        line-height: 2.8vh;
+    }
+    #get-involved .card button {
+        margin-block-start: 2vh;
+        padding: 0.8vh;
+        background-color: white;
+        border: 1px solid grey;
+        border-radius: 4px;
+        color: red;
+    }
+    
+    /* section get involved ***************************************************************/
+    #footer {
+        height: 40vh;
+        background-color: #f74d3d;
+        position: relative;
+    }
+    #Logo-brand {
+        margin-block-start: 30vh;
+        margin-inline-start: 5vh;
+    }
+    #back-to-top i{
+        margin-inline-start: 90vh;
+        margin-block-start: -5vh;
     }
     #back-to-top i:hover{
         background-color: grey;
